# 20231013SEC

./: .gitignore  card.py  carddeck.py  dict_of_lists.py  dictionaries.py  eval_links.py  exception_else.py  finally_example.py  fruits.txt  jokerdeck.py  list_comps_and_gen_expr.py  pastable.py  pdf_grep.py  pfruits.txt  printing.py  regex_syntax.txt  reversed_and_other_iterators.py  searchomatic.py  sequences.py  som_config.py  sort_asc_and_desc.py  string_fun.py  text_searcher.py  tuples.py  variable_scope.py  writing_to_files.py
ANSWERS/: add_columns.py  file_date.py  mark_big_words_backrefs.py  mark_big_words_callback.py  noaa_metadata.py  string_fun.py
DATA/: columns_of_numbers.xlsx  results.txt
EXAMPLES/: animal.py  basic_sorting.py  carddeck.py  consume_omdb_async.py  consume_omdb_cf_procs.py  consume_omdb_cf_threads.py  consume_omdb_main.py  consume_omdb_procs.py  consume_omdb_serial.py  consume_omdb_threads.py  datafiles.tar.bz2  db_mssql_basics.py  db_mysql_basics.py  db_mysql_bulk_insert.py  db_mysql_metadata.py  db_postgres_basics.py  db_postgres_bulk_insert.py  db_sqlite_bulk_insert.py  db_sqlite_parameterized.py  dictionaryapikey.txt  emoji_skin_tones.py  enumerate.py  exception_else.py  exception_generic.py  file_attrib.py  function_basics.py  function_parameters.py  generator_expressions.py  geometry.py  iterable_unpacking.py  jokerdeck.py  mpl_popup.py  (+67 more)
EXAMPLES/temperature/: pyproject.toml  setup.cfg
EXAMPLES/temperature/docs/source/: conf.py  index.rst
EXAMPLES/temperature/src/: temperature.py
EXAMPLES/temperature/tests/: test_temperature.py
(+14 files in other folders)
